[project]
name = "server"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "cachetools>=7.0.5",
    "chromadb>=1.5.1",
    "cryptography>=46.0.4",
    "ddgs>=9.11.4",
    "discord>=2.3.2",
    "fastapi>=0.128.5",
    "httpx>=0.28.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.21",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "logging>=0.4.9.6",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]
